syntax = "proto3";

package trabalho_sabatine;

service ApiService {
  rpc GetDispo (GetDispoRequest) returns (GetDispoReply) {}

  rpc GetDispoStreamReply (GetDispoRequest) returns (stream GetDispoReply) {}
}

message GetDispoRequest {
  string id_dispositivo = 1;
}

message GetDispoReply {
  string id_dispositivo = 1;
  string nome = 2;
  string codigo = 3;
  string marca = 4;
}